# connectors-native-sdk

./: .gitignore  CONTRIBUTING.md  README.md  settings.gradle
.env/: snowflake_credentials
.github/: CODEOWNERS  repo_meta.yaml
.github/workflows/: snyk-issue.yml  snyk-pr.yml
connectors-native-sdk-java/: .gitignore  Makefile  README.md  build.gradle
connectors-native-sdk-java-test/: README.md
connectors-native-sdk-java/scripts/: task_reactor_metrics.sql
connectors-native-sdk-test-java/: Makefile  README.md  build.gradle
deployment/: snowflake.toml
examples/: README.md
examples-basic/example-github-python-connector/: .gitignore  environment.yml  manifest.yml
examples-basic/example-push-based-java-connector/: settings.gradle
examples/example-github-python-connector/: app.toml  pyproject.toml  streamlit_app.py
examples/example-github-python-connector/sql/: deploy.sql
examples/example-github-python-connector/src/snowflake_github_connector/: common.py  ingestion.py  procedures.py
examples/example-github-python-connector/tests-integrations/: sf_config.json
examples/examples-basic/example-github-python-connector/: README.md  hatch_build.py  pyproject.toml  setup.sql  streamlit_app.py
examples/examples-basic/example-github-python-connector/sql/: deploy.sql  install.sql
examples/examples-basic/example-github-python-connector/src/snowflake_github_connector/: common.py  ingestion.py  procedures.py
examples/examples-basic/example-github-python-connector/tests-integrations/: conftest.py  test_procedures.py
templates/: README.md
(+951 files in other folders)
